# cidr-list-optimizer

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md
.kiro/skills/blind-implementation/: SKILL.md
.kiro/skills/changelog-management/: SKILL.md
.kiro/steering/: Project_Context_Loading.md
crates/cidr-optimizer/: Cargo.toml
crates/cidr-optimizer-cli/: Cargo.toml
crates/cidr-optimizer-cli/src/: main.rs
crates/cidr-optimizer-cli/tests/: exclusion_cli_test.rs  max_prefix_len_cli_test.rs  preferred_cli_test.rs
crates/cidr-optimizer/src/: error.rs  exclusion.rs  lib.rs  lossless.rs  optimizer.rs  parser.rs  preferred.rs  provenance.rs  source_map.rs  trie.rs  types.rs
crates/cidr-optimizer/tests/: coverage_validation_test.rs  stress_adversarial.rs  stress_config_constraints.rs  stress_differential_v4v6.rs  stress_lossy_deterministic.rs  stress_mixed_and_provenance.rs  stress_mixed_and_source_map.rs  stress_nomerge_v4.rs  stress_sequential_v4.rs  stress_sequential_v6.rs  stress_subnets_v4.rs
crates/cidr-optimizer/tests/common/: mod.rs
docs/: ARCHITECTURE.md  DEVELOPER_API.md  GETTING_STARTED.md  USER_GUIDE.md
scratchpad/: implementation.md  specification.md
scratchpad/cidr-optimizer-impl/: feedback-v1.md  feedback-v2.md  impl-report-v1.md  impl-report-v2.md  impl-report-v3.md  plan-review-v1.md  plan-review-v2.md  plan-review-v3.md  plan-v1.md  plan-v2.md  plan-v3.md  request.md  review-correctness.md  review-coverage-gaps.md  review-feasibility.md  review-synthesis.md  review-v1.md  review-v2.md  review-v3.md  stress-test-plan.md
scratchpad/stress-test-impl/: impl-report-v1.md  impl-report-v2.md  impl-report-v3.md  plan-review-v1.md  plan-review-v2.md  plan-review-v3.md  plan-v1.md  plan-v2.md  plan-v3.md  request.md  review-v1.md  review-v2.md  review-v3.md
tests/cli/: lib.sh  run_tests.sh  test_over_coverage_consistency.sh
(+9 files in other folders)
