[package]
name = "cidr-optimizer-cli"
version = "1.0.0"
edition = "2021"
rust-version = "1.93"

[[bin]]
name = "cidr-optimizer"
path = "src/main.rs"

[dependencies]
cidr-optimizer = { version = "1.0.0", path = "../cidr-optimizer" }
ipnet = "2"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
