[package]
name = "cidr-optimizer-cli"
version = "1.2.1"
edition = "2021"
rust-version = "1.93"
description = "CLI for cidr-optimizer: fit oversized IP allow-lists into AWS entry limits"
license = "MIT"
repository = "https://github.com/jcjorel/cidr-list-optimizer"
readme = "../../README.md"
keywords = ["cidr", "ip", "networking", "aws", "cli"]
categories = ["network-programming", "command-line-utilities"]

[[bin]]
name = "cidr-optimizer"
path = "src/main.rs"

[dependencies]
cidr-optimizer = { version = "1.2.1", path = "../cidr-optimizer" }
ipnet = "2"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
serde_json = "1"
