[package]
name = "cidr-optimizer"
version = "1.2.0"
edition = "2021"
rust-version = "1.93"
description = "Fit oversized IP allow-lists into AWS entry limits by computing the least-worst CIDR superset"
license = "MIT"
repository = "https://github.com/jcjorel/cidr-list-optimizer"
readme = "../../README.md"
keywords = ["cidr", "ip", "networking", "aws", "optimization"]
categories = ["network-programming", "command-line-utilities"]

[dependencies]
ipnet = "2"
thiserror = "2"

[features]
stress = []

[dev-dependencies]
proptest = "1"
ipnet = "2"
